--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,6 +39,16 @@
         </header>
 
         <main>
+            <!-- Network Toggle -->
+            <section class="network-toggle">
+                <label class="toggle-container">
+                    <span class="toggle-label">Network: <span id="networkLabel" class="network-label-text">Testnet</span></span>
+                    <input type="checkbox" id="networkToggle">
+                    <span class="toggle-slider"></span>
+                </label>
+                <p class="network-hint">Switch between Testnet and Mainnet</p>
+            </section>
+
             <!-- Input Section -->
             <section class="input-section">
                 <form id="analyzeForm">
